--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "sanity-gatsby-portfolio",
   "version": "0.0.0",
   "scripts": {
-    "build": "lerna run build --parallel",
+    "build": "npm run build-web",
     "dev": "lerna run dev --parallel",
     "format": "lerna run format",
     "build-studio": "(cd studio && npm run build)",
@@ -14,6 +14,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "lerna": "^3.13.1"
+    "lerna": "^3.19.0"
   }
 }
