--- a/studio/package.json
+++ b/studio/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "sanity-gatsby-portfolio-studio",
-  "version": "1.0.3",
+  "version": "1.0.1",
   "main": "package.json",
   "author": "Sanity <hello@sanity.io>",
   "scripts": {
@@ -13,21 +13,27 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^1.150.2",
-    "@sanity/cli": "^1.150.1",
-    "@sanity/components": "^1.150.2",
-    "@sanity/core": "^1.150.1",
-    "@sanity/dashboard": "^1.150.1",
-    "@sanity/default-layout": "^1.150.2",
-    "@sanity/default-login": "^1.150.1",
-    "@sanity/desk-tool": "^1.150.2",
-    "@sanity/studio-hints": "^1.150.1",
+    "@sanity/base": "^0.147.0",
+    "@sanity/cli": "^0.147.0",
+    "@sanity/components": "^0.147.2",
+    "@sanity/core": "^0.147.2",
+    "@sanity/dashboard": "^0.147.0",
+    "@sanity/default-layout": "^0.147.2",
+    "@sanity/default-login": "^0.147.0",
+    "@sanity/desk-tool": "^0.147.2",
+    "@sanity/image-url": "^0.140.15",
+    "@sanity/vision": "^0.147.2",
+    "braille": "^1.1.0",
     "date-fns": "^1.30.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "sanity-plugin-dashboard-widget-document-list": "^0.0.11",
-    "sanity-plugin-dashboard-widget-netlify": "^1.0.1"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-moveable": "^0.15.0",
+    "resize-observer": "^1.0.0",
+    "sanity-plugin-asset-source-unsplash": "^0.1.3",
+    "sanity-plugin-dashboard-widget-document-list": "^0.0.8",
+    "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
+    "sanity-plugin-url-metadata-input": "1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
